<resources>
    <string name="app_name">Pre-Hospital Services and Supplies</string>
    <string name="name"><b>Pre-Hospital Services\n\t\t\t\t\t\t\tand Supplies</b></string>
    <string name="create_new_account"><b>Create New Account</b></string>
    <string name="name1"><b>Username</b></string>
    <string name="email"><b>projectbysqubet@gmail.com</b></string>
    <string name="password"><b>password</b></string>
    <string name="c_password"><b>confirm password</b></string>
    <string name="already_have_account_signin">Already Have Account?Login now.</string>
    <string name="log_in_your_account">Log in your Account</string>
    <string name="no_account_create_now">No Account?Create now.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string-array name="array_country">
        <item>Select Your Division</item>

        <item>Dhaka</item>
        <item>Sylhet</item>
        <item>Chittagong</item>
        <item>Barisal</item>
        <item>Khulna</item>
        <item>Mymensingh</item>
        <item>Rajshahi</item>
        <item>Rangpur</item>


    </string-array>
    <string-array name="array_default_state">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_Dhaka_Division">
        <item>Select Your District</item>

        <item>Dhaka District</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Tangail</item>


        
    </string-array>
    <string-array name="array_sylhet_Division">
        <item>Select Your District</item>

        <item>Habiganj</item>
        <item>Moulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
    </string-array>
    <string-array name="array_Chittagong">
        <item>Select Your District</item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chittagong</item>
        <item>Comilla</item>
        <item>Coxs Bazar</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
    </string-array>
    <string-array name="array_Barisal">
        <item>Select Your District</item>
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
    </string-array>
    <string-array name="array_Khulna">
        <item>Select Your District</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jessore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
    </string-array>
    <string-array name="array_Mymensingh">
        <item>Select Your District</item>
        <item>Jamalpur</item>
        <item>Mymensingh</item>
        <item>Netrokona</item>
        <item>Sherpur</item>
    </string-array>
    <string-array name="array_Rajshahi">
        <item>Select Your District</item>
        <item>Bogra</item>
        <item>Joypurhat</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Chapai Nawabganj</item>
        <item>Pabna</item>
        <item>Rajshahi</item>
        <item>Sirajganj</item>
    </string-array>
    <string-array name="array_Rangpur">
        <item>Select Your District</item>
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram</item>
        <item>Lalmonirhat</item>
        <item>Nilphamari</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your Hospital</item>
    </string-array>
    <string-array name="array_DhahaHospital">
        <item>Select Your Hospital</item>
        <item>x</item>
        <item>y</item>
        <item>z</item>

    </string-array>
    <string-array name="array_HabiganjHospital">
        <item>Select Your Hospital</item>
        <item>Chader Hasi Hospital</item>
        <item>United Hospital</item>
        <item>Square Hospital</item>

    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your Hospital</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your District</item>
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
    <string-array name="array_bihar_districts">
        <item>Select Your District</item>
        <item>Araria</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bhagalpur</item>
        <item>Bhojpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="array_chhattisgarh_districts">
        <item>Select Your District</item>
        <item>Balod</item>
        <item>Baloda Bazar</item>
        <item>Balrampur Ramanujganj</item>
        <item>Bastar</item>
        <item>Bemetara</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Gariaband</item>
        <item>Gaurela Pendra Marwahi</item>
        <item>Janjgir Champa</item>
        <item>Jashpur</item>
        <item>Kabirdham</item>
        <item>Kanker</item>
        <item>Kondagaon</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Mungeli</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sukma</item>
        <item>Surajpur</item>
        <item>Surguja</item>
    </string-array>
    <string-array name="array_goa_districts">
        <item>Select Your District</item>
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
    <string-array name="array_gujarat_districts">
        <item>Select Your District</item>
        <item>Ahmedabad</item>
        <item>Amreli</item>
        <item>Anand</item>
        <item>Aravalli</item>
        <item>Banaskantha</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Botad</item>
        <item>Chhota Udaipur</item>
        <item>Dahod</item>
        <item>Dang</item>
        <item>Devbhoomi Dwarka</item>
        <item>Gandhinagar</item>
        <item>Gir Somnath</item>
        <item>Jamnagar</item>
        <item>Junagadh</item>
        <item>Kheda</item>
        <item>Kutch</item>
        <item>Mahisagar</item>
        <item>Mehsana</item>
        <item>Morbi</item>
        <item>Narmada</item>
        <item>Navsari</item>
        <item>Panchmahal</item>
        <item>Patan</item>
        <item>Porbandar</item>
        <item>Rajkot</item>
        <item>Sabarkantha</item>
        <item>Surat</item>
        <item>Surendranagar</item>
        <item>Tapi</item>
        <item>Vadodara</item>
        <item>Valsad</item>
    </string-array>
    <string-array name="array_haryana_districts">
        <item>Select Your District</item>
        <item>Ambala</item>
        <item>Bhiwani</item>
        <item>Charkhi Dadri</item>
        <item>Faridabad</item>
        <item>Fatehabad</item>
        <item>Gurugram</item>
        <item>Hisar</item>
        <item>Jhajjar</item>
        <item>Jind</item>
        <item>Kaithal</item>
        <item>Karnal</item>
        <item>Kurukshetra</item>
        <item>Mahendragarh</item>
        <item>Mewat</item>
        <item>Palwal</item>
        <item>Panchkula</item>
        <item>Panipat</item>
        <item>Rewari</item>
        <item>Rohtak</item>
        <item>Sirsa</item>
        <item>Sonipat</item>
        <item>Yamunanagar</item>
    </string-array>
</resources>